fixed button font-size on tablet devices

--- a/LESS/mixins.less
+++ b/LESS/mixins.less
@@ -9,6 +9,9 @@
   @media @mobile {
     font-size: 1rem;
   }
+  @media @tablet {
+    font-size: 2rem;
+  }
 }
 
 .signUpButton() {
@@ -26,5 +29,8 @@
   }
   @media @mobile {
     font-size: 1rem;
+  }
+  @media @tablet {
+    font-size: 2rem;
   }
 }
